--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             // }
             // }, 1500); // 1.5초 대기 후 스토어로 이동
           } catch (error) {
-            window.location = fallbackStoreUrl;
+            // window.location = fallbackStoreUrl;
+            $("#openStoreButton").trigger("click");
           }
         } else {
           // 지원되지 않는 플랫폼
