--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         const appScheme = "kmembers://kyowon"; // 앱 딥링크 스킴
         const iosStoreUrl = "https://apps.apple.com/app/1499475538"; // iOS 앱스토어 URL
         const androidStoreUrl =
-          "https://play.google.com/store/apps/details?id=com.kyowon.kmembers"; // Android 스토어 URL
+          "play.google.com/store/apps/details?id=com.kyowon.kmembers"; // Android 스토어 URL
         const fallbackStoreUrl = isIOS ? iosStoreUrl : androidStoreUrl;
 
         const deepLinkUrl = `${appScheme}?push-intent-link=${encodeURIComponent(
@@ -82,8 +82,8 @@
             // }
             // }, 1500); // 1.5초 대기 후 스토어로 이동
           } catch (error) {
-            // window.location.href = fallbackStoreUrl;
-            document.getElementById("openStoreButton").click();
+            window.location.href = fallbackStoreUrl;
+            // document.getElementById("openStoreButton").click();
           }
         } else {
           // 지원되지 않는 플랫폼
