--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
               // iOS에서는 딥링크 호출 실패 시 바로 fallback이 발생하지 않으므로 시간 기반으로 처리
               if (elapsedTime < 2000) {
-                window.location.href = fallbackStoreUrl;
+                document.getElementById("openStoreButton").click();
               }
             }, 1500); // 1.5초 대기 후 스토어로 이동
           } catch (error) {
-            window.location.href = fallbackStoreUrl;
+            document.getElementById("openStoreButton").click();
           }
         } else {
           // 지원되지 않는 플랫폼
